==> iarsystems/ewarm-st-example-projects/STM32F4xx/IAR-STM32F429II-SK/TempSensor/modules/drv_glcd.c <==
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <assert.h>
#include <stdarg.h>
#include "includes.h"
#define C_GLCD_CLK_PER_LINE     (C_GLCD_H_SIZE + C_GLCD_H_PULSE + C_GLCD_H_FRONT_PORCH + C_GLCD_H_BACK_PORCH)
#define C_GLCD_LINES_PER_FRAME  (C_GLCD_V_SIZE + C_GLCD_V_PULSE + C_GLCD_V_FRONT_PORCH + C_GLCD_V_BACK_PORCH)
#define C_GLCD_PIX_CLK          (9.1MHZ)
#define LCD_LAYERS_COUNT   2
#define LCD_VRAM_BASE_ADDR ((Int32U)SDRAM_VRAM_BASE_ADDR)
#define LCD_VRAM2_BASE_ADDR ((Int32U)SDRAM_VRAM2_BASE_ADDR)
#define EXP_COEF -0.011

void GLCD_Init (pPic_t pPic, const uint32_t * pPallete)
{
uint32_t * pDst = (uint32_t *) LCD_VRAM_BASE_ADDR;
GPIO_InitTypeDef GPIO_InitStruct;
LTDC_InitTypeDef LTDC_InitStruct;
LTDC_Layer_InitTypeDef LTDC_Layer_InitStruct;

  /* Pin Configure */
  /* Enable GPIOs clocks */
  RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOD | RCC_AHB1Periph_GPIOE |
                         RCC_AHB1Periph_GPIOF | RCC_AHB1Periph_GPIOG |
                         RCC_AHB1Periph_GPIOH | RCC_AHB1Periph_GPIOI , ENABLE);

  /* Configure LCD_G7*/
  GPIO_InitStruct.GPIO_Pin =  GPIO_Pin_3;
  GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_NOPULL;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_2MHz;
  GPIO_Init(GPIOD, &GPIO_InitStruct);
  /* Configure LCD_G7*/
  GPIO_PinAFConfig(GPIOD, GPIO_PinSource3, GPIO_AF_LTDC);

  /* Configure LCD_B0,LCD_G0,LCD_G1, */
  GPIO_InitStruct.GPIO_Pin =  GPIO_Pin_4 | GPIO_Pin_5  | GPIO_Pin_6;
  GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_NOPULL;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_2MHz;
  GPIO_Init(GPIOE, &GPIO_InitStruct);
  /* Configure LCD_B0,LCD_G0,LCD_G1, */
  GPIO_PinAFConfig(GPIOE, GPIO_PinSource4, GPIO_AF_LTDC);
  GPIO_PinAFConfig(GPIOE, GPIO_PinSource5, GPIO_AF_LTDC);
  GPIO_PinAFConfig(GPIOE, GPIO_PinSource6, GPIO_AF_LTDC);

  /* Configure LCD_DE */
  GPIO_InitStruct.GPIO_Pin =  GPIO_Pin_10;
  GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_NOPULL;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_25MHz;
  GPIO_Init(GPIOF, &GPIO_InitStruct);
  /* Configure LCD_DE */
  GPIO_PinAFConfig(GPIOF, GPIO_PinSource10, GPIO_AF_LTDC);

  /* Configure LCD_R7,LCD_CLK,LCD_B2,LCD_B3,LCD_B1 */
  GPIO_InitStruct.GPIO_Pin =  GPIO_Pin_6  /*| GPIO_Pin_7 */ |
                              GPIO_Pin_10 | GPIO_Pin_11 | GPIO_Pin_12;
  GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_NOPULL;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_2MHz;
  GPIO_Init(GPIOG, &GPIO_InitStruct);
  /* Configure LCD_CLK */
  GPIO_InitStruct.GPIO_Pin = GPIO_Pin_7  ;
  GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_NOPULL;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_25MHz;
  GPIO_Init(GPIOG, &GPIO_InitStruct);
  /* Configure LCD_R7,LCD_CLK,LCD_B2,LCD_B3,LCD_B1 */
  GPIO_PinAFConfig(GPIOG, GPIO_PinSource6, GPIO_AF_LTDC);
  GPIO_PinAFConfig(GPIOG, GPIO_PinSource7, GPIO_AF_LTDC);
  GPIO_PinAFConfig(GPIOG, GPIO_PinSource10, GPIO_AF_LTDC);
  GPIO_PinAFConfig(GPIOG, GPIO_PinSource11, GPIO_AF_LTDC);
  GPIO_PinAFConfig(GPIOG, GPIO_PinSource12, GPIO_AF_LTDC);

  /* Configure LCD_R0,LCD_R1,LCD_R2,LCD_R3,LCD_R4,LCD_R5,LCD_R6
               LCD_G2,LCD_G3,LCD_G4 */
  GPIO_InitStruct.GPIO_Pin =  GPIO_Pin_2  | GPIO_Pin_3  | GPIO_Pin_8  |
                              GPIO_Pin_9  | GPIO_Pin_10 | GPIO_Pin_11 |
                              GPIO_Pin_12 | GPIO_Pin_13 | GPIO_Pin_14 |
                              GPIO_Pin_15 ;
  GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_NOPULL;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_2MHz;
  GPIO_Init(GPIOH, &GPIO_InitStruct);
  /* Configure LCD_R0,LCD_R1,LCD_R2,LCD_R3,LCD_R4,LCD_R5,LCD_R6
               LCD_G2,LCD_G3,LCD_G4 */
  GPIO_PinAFConfig(GPIOH, GPIO_PinSource2, GPIO_AF_LTDC);
  GPIO_PinAFConfig(GPIOH, GPIO_PinSource3, GPIO_AF_LTDC);
  GPIO_PinAFConfig(GPIOH, GPIO_PinSource8, GPIO_AF_LTDC);
  GPIO_PinAFConfig(GPIOH, GPIO_PinSource9, GPIO_AF_LTDC);
  GPIO_PinAFConfig(GPIOH, GPIO_PinSource10, GPIO_AF_LTDC);
  GPIO_PinAFConfig(GPIOH, GPIO_PinSource11, GPIO_AF_LTDC);
  GPIO_PinAFConfig(GPIOH, GPIO_PinSource12, GPIO_AF_LTDC);
  GPIO_PinAFConfig(GPIOH, GPIO_PinSource13, GPIO_AF_LTDC);
  GPIO_PinAFConfig(GPIOH, GPIO_PinSource14, GPIO_AF_LTDC);
  GPIO_PinAFConfig(GPIOH, GPIO_PinSource15, GPIO_AF_LTDC);

  /* Configure LCD_G5,LCD_G6,LCD_B4,LCD_B5,LCD_B6,LCD_B7 */
  GPIO_InitStruct.GPIO_Pin =  GPIO_Pin_0 | GPIO_Pin_1 | GPIO_Pin_4 |
                              GPIO_Pin_5 | GPIO_Pin_6 | GPIO_Pin_7 ;
  GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_NOPULL;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_2MHz;
  GPIO_Init(GPIOI, &GPIO_InitStruct);
  /* Configure LCD_G5,LCD_G6,LCD_B4,LCD_B5,LCD_B6,LCD_B7 */
  GPIO_PinAFConfig(GPIOI, GPIO_PinSource0, GPIO_AF_LTDC);
  GPIO_PinAFConfig(GPIOI, GPIO_PinSource1, GPIO_AF_LTDC);
  GPIO_PinAFConfig(GPIOI, GPIO_PinSource4, GPIO_AF_LTDC);
  GPIO_PinAFConfig(GPIOI, GPIO_PinSource5, GPIO_AF_LTDC);
  GPIO_PinAFConfig(GPIOI, GPIO_PinSource6, GPIO_AF_LTDC);
  GPIO_PinAFConfig(GPIOI, GPIO_PinSource7, GPIO_AF_LTDC);

  /* Init GLCD cotroller */
  /* Clock init PLLSAI R output @ 10MHz
     LTDC Clock @ 5MHz */
  RCC_PLLSAIConfig(72, 0, 4);
  RCC_LTDCCLKDivConfig(RCC_PLLSAIDivR_Div2);
  RCC_PLLSAICmd(ENABLE);

  RCC_APB2PeriphClockCmd(RCC_APB2Periph_LTDC, ENABLE);

  for(uint32_t i = 0; 10000 > i; i++);

  LTDC_InitStruct.LTDC_HSPolarity = LTDC_HSPolarity_AL;
  LTDC_InitStruct.LTDC_VSPolarity = LTDC_VSPolarity_AL;
  LTDC_InitStruct.LTDC_DEPolarity = LTDC_DEPolarity_AL;
  LTDC_InitStruct.LTDC_PCPolarity = LTDC_PCPolarity_IPC;
  LTDC_InitStruct.LTDC_HorizontalSync = C_GLCD_H_PULSE - 1;
  LTDC_InitStruct.LTDC_VerticalSync = C_GLCD_V_PULSE - 1;
  LTDC_InitStruct.LTDC_AccumulatedHBP = C_GLCD_H_PULSE + C_GLCD_H_BACK_PORCH - 1;
  LTDC_InitStruct.LTDC_AccumulatedVBP = C_GLCD_V_PULSE + C_GLCD_V_BACK_PORCH - 1;
  LTDC_InitStruct.LTDC_AccumulatedActiveW = C_GLCD_H_PULSE + C_GLCD_H_BACK_PORCH \
                                            + C_GLCD_H_SIZE - 1;
  LTDC_InitStruct.LTDC_AccumulatedActiveH = C_GLCD_V_PULSE + C_GLCD_V_BACK_PORCH \
                                          + C_GLCD_V_SIZE - 1;
  LTDC_InitStruct.LTDC_TotalWidth = C_GLCD_H_PULSE + C_GLCD_H_BACK_PORCH \
                                  + C_GLCD_H_SIZE + C_GLCD_H_FRONT_PORCH - 1;
  LTDC_InitStruct.LTDC_TotalHeigh = C_GLCD_V_PULSE + C_GLCD_V_BACK_PORCH \
                                  + C_GLCD_V_SIZE + C_GLCD_V_FRONT_PORCH - 1;

  LTDC_InitStruct.LTDC_BackgroundRedValue = 0x00;
  LTDC_InitStruct.LTDC_BackgroundGreenValue = 0x00;
  LTDC_InitStruct.LTDC_BackgroundBlueValue = 0x00;
  LTDC_Init(&LTDC_InitStruct);

  LTDC_Layer_InitStruct.LTDC_HorizontalStart = C_GLCD_H_PULSE + C_GLCD_H_BACK_PORCH ;
  LTDC_Layer_InitStruct.LTDC_HorizontalStop = C_GLCD_H_PULSE + C_GLCD_H_BACK_PORCH \
                                            + C_GLCD_H_SIZE - 1;
  LTDC_Layer_InitStruct.LTDC_VarticalStart = C_GLCD_V_PULSE + C_GLCD_V_BACK_PORCH ;
  LTDC_Layer_InitStruct.LTDC_VerticalStop = C_GLCD_V_PULSE + C_GLCD_V_BACK_PORCH \
                                          + C_GLCD_V_SIZE - 1;
  LTDC_Layer_InitStruct.LTDC_PixelFormat = LTDC_Pixelformat_ARGB8888;
  LTDC_Layer_InitStruct.LTDC_ConstantAlpha = 0xFF;
  LTDC_Layer_InitStruct.LTDC_DefaultColorBlue = 0x00;
  LTDC_Layer_InitStruct.LTDC_DefaultColorGreen = 0x00;
  LTDC_Layer_InitStruct.LTDC_DefaultColorRed = 0x00;
  LTDC_Layer_InitStruct.LTDC_DefaultColorAlpha = 0x00;
  LTDC_Layer_InitStruct.LTDC_BlendingFactor_1 = LTDC_BlendingFactor1_CA;
  LTDC_Layer_InitStruct.LTDC_BlendingFactor_2 = LTDC_BlendingFactor2_CA;
  LTDC_Layer_InitStruct.LTDC_CFBStartAdress = LCD_VRAM_BASE_ADDR;
  LTDC_Layer_InitStruct.LTDC_CFBLineLength = C_GLCD_H_SIZE*4+3;
  LTDC_Layer_InitStruct.LTDC_CFBPitch = C_GLCD_H_SIZE*4;
  LTDC_Layer_InitStruct.LTDC_CFBLineNumber = C_GLCD_V_SIZE;
  LTDC_LayerInit(LTDC_Layer1,&LTDC_Layer_InitStruct);

  LTDC_LayerCmd(LTDC_Layer1,ENABLE);
  LTDC_ReloadConfig(LTDC_IMReload);

  if(NULL != pPallete)
  {
    GLCD_SetPallete(pPallete, Layer1);
  }

  if (NULL == pPic)
  {
    uint32_t pix = 0;
    /* Set test picture */
    for(uint32_t v = 0; (C_GLCD_V_SIZE) > v; v++)
    {
      pDst = (uint32_t *)LCD_VRAM_BASE_ADDR + v*C_GLCD_H_SIZE;
      uint32_t i = 0;

      for(uint32_t n = 0; 8 > n; n++)
      {
        pix = testtbl[n]*0xFF/*(uint32_t)(275*(1-exp(EXP_COEF*v)))*/;
        for(/*empty*/ ; i < C_GLCD_H_SIZE*(n+1)/8;i++)
        {
           *(pDst+i) = pix;
        }
      }
    }
  }
  else
  {
    // set display memory

   GLCD_ShowPic(0,0,pPic,0,Layer1);
   /*
    for(uint32_t i = 0; (C_GLCD_H_SIZE * C_GLCD_V_SIZE) > i; i++)
    {
      *pDst++ = *pPain++;
    }*/
  }

  for(volatile uint32_t i = C_GLCD_ENA_DIS_DLY; i; i--);
}

void GLCD_Layer2_Init(pPic_t pPic, const uint32_t * pPallete)
{
LTDC_Layer_InitTypeDef LTDC_Layer_InitStruct;
uint32_t * pData = (uint32_t *)LCD_VRAM2_BASE_ADDR;

  memset(pData,0x00,C_GLCD_LAYER2_H_SIZE*C_GLCD_LAYER2_V_SIZE*4);

  LTDC_Layer_InitStruct.LTDC_HorizontalStart = C_GLCD_H_PULSE + C_GLCD_H_BACK_PORCH ;

  LTDC_Layer_InitStruct.LTDC_HorizontalStop = C_GLCD_H_PULSE + C_GLCD_H_BACK_PORCH \
                                            + C_GLCD_LAYER2_H_SIZE - 1;

  LTDC_Layer_InitStruct.LTDC_VarticalStart = C_GLCD_V_PULSE + C_GLCD_V_BACK_PORCH ;

  LTDC_Layer_InitStruct.LTDC_VerticalStop = C_GLCD_V_PULSE + C_GLCD_V_BACK_PORCH \
                                          + C_GLCD_LAYER2_V_SIZE - 1;

  LTDC_Layer_InitStruct.LTDC_PixelFormat = LTDC_Pixelformat_ARGB8888;
  LTDC_Layer_InitStruct.LTDC_ConstantAlpha = 0xFF;
  LTDC_Layer_InitStruct.LTDC_DefaultColorBlue = 0x00;
  LTDC_Layer_InitStruct.LTDC_DefaultColorGreen = 0x00;
  LTDC_Layer_InitStruct.LTDC_DefaultColorRed = 0x00;
  LTDC_Layer_InitStruct.LTDC_DefaultColorAlpha = 0x00;
  LTDC_Layer_InitStruct.LTDC_BlendingFactor_1 = LTDC_BlendingFactor1_PAxCA;
  LTDC_Layer_InitStruct.LTDC_BlendingFactor_2 = LTDC_BlendingFactor2_PAxCA;
  LTDC_Layer_InitStruct.LTDC_CFBStartAdress = LCD_VRAM2_BASE_ADDR;
  LTDC_Layer_InitStruct.LTDC_CFBLineLength = C_GLCD_LAYER2_H_SIZE*4+3;
  LTDC_Layer_InitStruct.LTDC_CFBPitch = C_GLCD_LAYER2_H_SIZE*4;
  LTDC_Layer_InitStruct.LTDC_CFBLineNumber = C_GLCD_LAYER2_V_SIZE;
  LTDC_LayerInit(LTDC_Layer2,&LTDC_Layer_InitStruct);

  LTDC_LayerCmd(LTDC_Layer2,ENABLE);
  LTDC_ReloadConfig(LTDC_VBReload);

  if(NULL != pPallete)
  {
    GLCD_SetPallete(pPallete, Layer2);
  }

  if (NULL != pPic)
  {
    GLCD_ShowPic(0,0,pPic,0,Layer2);
  }

}

void GLCD_Ctrl (Boolean bEna)
{
  if (bEna)
  {
    LTDC_Cmd(ENABLE);
  }
  else
  {
    LTDC_Cmd(DISABLE);
  }
}
