==> iarsystems/ewarm-st-example-projects/STM32F7xx/IAR-STM32F746xx-SK/AudioDemo/modules/drv_glcd.c <==
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <assert.h>
#include <stdarg.h>
#include "includes.h"
#define C_GLCD_CLK_PER_LINE     (C_GLCD_H_SIZE + C_GLCD_H_PULSE + C_GLCD_H_FRONT_PORCH + C_GLCD_H_BACK_PORCH)
#define C_GLCD_LINES_PER_FRAME  (C_GLCD_V_SIZE + C_GLCD_V_PULSE + C_GLCD_V_FRONT_PORCH + C_GLCD_V_BACK_PORCH)
#define C_GLCD_PIX_CLK          (9.1MHZ)
#define LCD_LAYERS_COUNT   2
#define LCD_VRAM_BASE_ADDR ((Int32U)SDRAM_VRAM_BASE_ADDR)
#define LCD_VRAM2_BASE_ADDR ((Int32U)SDRAM_VRAM2_BASE_ADDR)

void GLCD_Init(pPic_t pPic, const uint32_t * pPallete)
{
uint32_t * pDst = (uint32_t *) LCD_VRAM_BASE_ADDR;
GPIO_InitTypeDef GPIO_InitStruct;
LTDC_LayerCfgTypeDef LTDC_Layer_InitStruct;

      
  __HAL_RCC_LTDC_CLK_ENABLE();
  
  /* Enable GPIOs clocks */
  __HAL_RCC_GPIOD_CLK_ENABLE();
  __HAL_RCC_GPIOE_CLK_ENABLE();
  __HAL_RCC_GPIOF_CLK_ENABLE();
  __HAL_RCC_GPIOG_CLK_ENABLE();
  __HAL_RCC_GPIOH_CLK_ENABLE();
  __HAL_RCC_GPIOI_CLK_ENABLE();
  
  /* Configure LCD_G7*/
  GPIO_InitStruct.Pin =  GPIO_PIN_3;
  GPIO_InitStruct.Mode = GPIO_MODE_AF_PP; 
  GPIO_InitStruct.Pull = GPIO_NOPULL;
  GPIO_InitStruct.Speed = GPIO_SPEED_HIGH;
  GPIO_InitStruct.Alternate = GPIO_AF14_LTDC;
  HAL_GPIO_Init(GPIOD, &GPIO_InitStruct);
  
  /* Configure LCD_B0,LCD_G0,LCD_G1, */
  GPIO_InitStruct.Pin =  GPIO_PIN_4 | GPIO_PIN_5  | GPIO_PIN_6;
  GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
  GPIO_InitStruct.Pull = GPIO_NOPULL;
  GPIO_InitStruct.Speed = GPIO_SPEED_HIGH;
  GPIO_InitStruct.Alternate = GPIO_AF14_LTDC;
  HAL_GPIO_Init(GPIOE, &GPIO_InitStruct);  

  /* Configure LCD_DE */
  GPIO_InitStruct.Pin =  GPIO_PIN_10;
  GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
  GPIO_InitStruct.Pull = GPIO_NOPULL;
  GPIO_InitStruct.Speed = GPIO_SPEED_HIGH;
  GPIO_InitStruct.Alternate = GPIO_AF14_LTDC;
  HAL_GPIO_Init(GPIOF, &GPIO_InitStruct);

  /* Configure LCD_R7,LCD_B2,LCD_B3,LCD_B1 */
  GPIO_InitStruct.Pin =  GPIO_PIN_6  | 
                         GPIO_PIN_10 | GPIO_PIN_11 | GPIO_PIN_12;
  GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
  GPIO_InitStruct.Pull = GPIO_NOPULL;
  GPIO_InitStruct.Speed = GPIO_SPEED_HIGH;
  GPIO_InitStruct.Alternate = GPIO_AF14_LTDC;
  HAL_GPIO_Init(GPIOG, &GPIO_InitStruct);
  
  /* Configure LCD_CLK */
  GPIO_InitStruct.Pin = GPIO_PIN_7  ;
  GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
  GPIO_InitStruct.Pull = GPIO_NOPULL;
  GPIO_InitStruct.Speed = GPIO_SPEED_HIGH;
  GPIO_InitStruct.Alternate = GPIO_AF14_LTDC;
  HAL_GPIO_Init(GPIOG, &GPIO_InitStruct);

  /* Configure LCD_R0,LCD_R1,LCD_R2,LCD_R3,LCD_R4,LCD_R5,LCD_R6
               LCD_G2,LCD_G3,LCD_G4 */
  GPIO_InitStruct.Pin =  GPIO_PIN_2  | GPIO_PIN_3  | GPIO_PIN_8  |
                         GPIO_PIN_9  | GPIO_PIN_10 | GPIO_PIN_11 |
                         GPIO_PIN_12 | GPIO_PIN_13 | GPIO_PIN_14 |
                         GPIO_PIN_15 ;
  GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
  GPIO_InitStruct.Pull = GPIO_NOPULL;
  GPIO_InitStruct.Speed = GPIO_SPEED_HIGH;
  GPIO_InitStruct.Alternate = GPIO_AF14_LTDC;
  HAL_GPIO_Init(GPIOH, &GPIO_InitStruct);

  /* Configure LCD_G5,LCD_G6,LCD_B4,LCD_B5,LCD_B6,LCD_B7 */
  GPIO_InitStruct.Pin =  GPIO_PIN_0 | GPIO_PIN_1 | GPIO_PIN_4 |
                         GPIO_PIN_5 | GPIO_PIN_6 | GPIO_PIN_7 ;
  GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
  GPIO_InitStruct.Pull = GPIO_NOPULL;
  GPIO_InitStruct.Speed = GPIO_SPEED_HIGH;
  GPIO_InitStruct.Alternate = GPIO_AF14_LTDC;
  HAL_GPIO_Init(GPIOI, &GPIO_InitStruct);

  /* Back light enable */
  GPIO_InitStruct.Pin = LCD_BACKLIGHT_PIN;
  GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStruct.Pull = GPIO_NOPULL;
  GPIO_InitStruct.Speed = GPIO_SPEED_LOW;
  HAL_GPIO_Init(LCD_BACKLIGHT_PORT, &GPIO_InitStruct);
  HAL_GPIO_WritePin(LCD_BACKLIGHT_PORT, LCD_BACKLIGHT_PIN, GPIO_PIN_RESET);

  /* Init GLCD cotroller */
  /* 12MHz clock should be provided */
  
  hltdc.Instance = LTDC;
  hltdc.Init.HSPolarity = LTDC_HSPOLARITY_AL;
  hltdc.Init.VSPolarity = LTDC_VSPOLARITY_AL;
  hltdc.Init.DEPolarity = LTDC_DEPOLARITY_AL;                 
  hltdc.Init.PCPolarity = LTDC_PCPOLARITY_IPC;                
  hltdc.Init.HorizontalSync = C_GLCD_H_PULSE - 1;
  hltdc.Init.VerticalSync = C_GLCD_V_PULSE - 1;
  hltdc.Init.AccumulatedHBP = C_GLCD_H_PULSE + C_GLCD_H_BACK_PORCH - 1;
  hltdc.Init.AccumulatedVBP = C_GLCD_V_PULSE + C_GLCD_V_BACK_PORCH - 1;
  hltdc.Init.AccumulatedActiveW = C_GLCD_H_PULSE + C_GLCD_H_BACK_PORCH \
                                            + C_GLCD_H_SIZE - 1;         
  hltdc.Init.AccumulatedActiveH = C_GLCD_V_PULSE + C_GLCD_V_BACK_PORCH \
                                          + C_GLCD_V_SIZE - 1;         
  hltdc.Init.TotalWidth = C_GLCD_H_PULSE + C_GLCD_H_BACK_PORCH \
                                  + C_GLCD_H_SIZE + C_GLCD_H_FRONT_PORCH - 1;         
  hltdc.Init.TotalHeigh = C_GLCD_V_PULSE + C_GLCD_V_BACK_PORCH \
                                  + C_GLCD_V_SIZE + C_GLCD_V_FRONT_PORCH - 1;         

  hltdc.Init.Backcolor.Red = 0x00; 
  hltdc.Init.Backcolor.Green = 0x00;
  hltdc.Init.Backcolor.Blue = 0x00;
  HAL_LTDC_Init(&hltdc);
  
  LTDC_Layer_InitStruct.WindowX0 = 0; 
  LTDC_Layer_InitStruct.WindowX1 = 480;
  LTDC_Layer_InitStruct.WindowY0 = 0;
  LTDC_Layer_InitStruct.WindowY1 = 272;
    
  LTDC_Layer_InitStruct.PixelFormat = LTDC_PIXEL_FORMAT_ARGB8888;       
  LTDC_Layer_InitStruct.Alpha = 0xFF;     
  LTDC_Layer_InitStruct.Backcolor.Blue = 0x00;  
  LTDC_Layer_InitStruct.Backcolor.Green = 0x00; 
  LTDC_Layer_InitStruct.Backcolor.Red = 0x00;   
  LTDC_Layer_InitStruct.Alpha0 = 0x00; 
  LTDC_Layer_InitStruct.BlendingFactor1 = LTDC_BLENDING_FACTOR1_CA;    
  LTDC_Layer_InitStruct.BlendingFactor2 = LTDC_BLENDING_FACTOR2_CA;   
  LTDC_Layer_InitStruct.FBStartAdress = LCD_VRAM_BASE_ADDR;    
  LTDC_Layer_InitStruct.ImageWidth = C_GLCD_H_SIZE;
  LTDC_Layer_InitStruct.ImageHeight = C_GLCD_V_SIZE;
  HAL_LTDC_ConfigLayer(&hltdc, &LTDC_Layer_InitStruct, 0);
  
  __HAL_LTDC_RELOAD_CONFIG(&hltdc);
  
  if(NULL != pPallete)
  {
    GLCD_SetPallete(pPallete, Layer1);
  }

  if (NULL == pPic)
  {
    uint32_t pix = 0;
    /* Set test picture */
    for(uint32_t v = 0; (C_GLCD_V_SIZE) > v; v++)
    {
      pDst = (uint32_t *)LCD_VRAM_BASE_ADDR + v*C_GLCD_H_SIZE;
      uint32_t i = 0;

      for(uint32_t n = 0; 8 > n; n++)
      {
        pix = testtbl[n]*0xFF;
        for(/*empty*/ ; i < C_GLCD_H_SIZE*(n+1)/8;i++)
        { 
           *(pDst+i) = pix;
        }
      }
    }
  }
  else
  {
    // set display memory
    
   GLCD_ShowPic(0,0,pPic,0,Layer1);
   /*
    for(uint32_t i = 0; (C_GLCD_H_SIZE * C_GLCD_V_SIZE) > i; i++)
    {
      *pDst++ = *pPain++;
    }*/
  }

  for(volatile uint32_t i = C_GLCD_ENA_DIS_DLY; i; i--);
}

void GLCD_Layer2_Init(pPic_t pPic, const uint32_t * pPallete)
{
LTDC_LayerCfgTypeDef LTDC_Layer_InitStruct;
uint32_t * pData = (uint32_t *)LCD_VRAM2_BASE_ADDR;

  memset(pData,0x00,C_GLCD_LAYER2_H_SIZE*C_GLCD_LAYER2_V_SIZE*4);

  LTDC_Layer_InitStruct.WindowX0 = 0;
  LTDC_Layer_InitStruct.WindowX1 = C_GLCD_LAYER2_H_SIZE;
  LTDC_Layer_InitStruct.WindowY0 = 0;
  LTDC_Layer_InitStruct.WindowY1 = C_GLCD_LAYER2_V_SIZE;

  LTDC_Layer_InitStruct.PixelFormat = LTDC_PIXEL_FORMAT_ARGB8888;
  LTDC_Layer_InitStruct.Alpha = 0xFF;
  LTDC_Layer_InitStruct.Backcolor.Blue = 0x00;
  LTDC_Layer_InitStruct.Backcolor.Green = 0x00;
  LTDC_Layer_InitStruct.Backcolor.Red = 0x00;
  LTDC_Layer_InitStruct.Alpha0 = 0x00;
  LTDC_Layer_InitStruct.BlendingFactor1 = LTDC_BLENDING_FACTOR1_PAxCA;
  LTDC_Layer_InitStruct.BlendingFactor2 = LTDC_BLENDING_FACTOR2_PAxCA;
  LTDC_Layer_InitStruct.FBStartAdress = LCD_VRAM2_BASE_ADDR;
  LTDC_Layer_InitStruct.ImageWidth = C_GLCD_LAYER2_H_SIZE;
  LTDC_Layer_InitStruct.ImageHeight = C_GLCD_LAYER2_V_SIZE;
  HAL_LTDC_ConfigLayer(&hltdc, &LTDC_Layer_InitStruct, Layer2);
  
  //__HAL_LTDC_RELOAD_CONFIG(&hltdc);

  if(NULL != pPallete)
  {
    GLCD_SetPallete(pPallete, Layer2);
  }

  if (NULL != pPic)
  {
    GLCD_ShowPic(0,0,pPic,0, Layer2);
  }

}

void GLCD_Ctrl (Boolean bEna)
{
  if (bEna)
  {
    __HAL_LTDC_ENABLE(&hltdc);
  }
  else
  {
    __HAL_LTDC_DISABLE(&hltdc);
  }
}
